--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "env": "^0.0.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
